Fix alignment

--- a/src/app/detailCause/detail-cause.component.css
+++ b/src/app/detailCause/detail-cause.component.css
@@ -9,11 +9,12 @@
 .left{
     float:left;
     margin-left: 50px;
+
 }
 
 .right{
     float: right;
-    margin: 40px;
+    margin: 0px 20px;
 
 }
 
